--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,19 @@
-<%= @user.name %>, <%= @user.email %>
-<div class = "col-md-8">
-	<% if !@user.budget.nil?%>
-	 	<%= @user.budget.income %>
- 	<% end %>
+<% provide(:title, @user.name) %>
+<div class="row">
+  <aside class="col-md-3">
+    <section class="user_info">
+      <h1>
+        <%= @user.name %>
+      </h1>
+    </section>
+  </aside>
+  <div class="col-md-8">
+    <% if @user.expenses.any? %>
+      <h3>Expenses (<%= @user.expenses.count %>)</h3>
+      <ol class="expenses">
+        <%= render @expenses %>
+      </ol>
+      <%= will_paginate @expenses %>
+    <% end %>
+  </div>
 </div>
