Working Budget Model

--- a/app/views/expenses/_expense.html.erb
+++ b/app/views/expenses/_expense.html.erb
@@ -2,7 +2,7 @@
   <span class="user"><%= link_to expense.user.name, expense.user %></span>
   <span class="name">Name: <b><%= expense.name %></b></span>
   <span class="category">Category: <b><%= expense.category %></b></span>
-  <span class="value">Amount: <b>$<%= expense.value %></b></span>
+  <span class="value">Amount: <b>$<%= number_with_precision expense.value, :precision => 2 %></b></span>
   <span class="timestamp">
     Uploaded <%= time_ago_in_words(expense.created_at) %> ago.
     <% if current_user?(expense.user) %>
