--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,11 +1,12 @@
 <% provide(:title, "About") %>
 <h1>About</h1>
 <p>
-  The <a href="http://www.railstutorial.org/"><em>Ruby on Rails
-  Tutorial</em></a> is a
-  <a href="http://www.railstutorial.org/book">book</a> and
-  <a href="http://screencasts.railstutorial.org/">screencast series</a>
-  to teach web development with
-  <a href="http://rubyonrails.org/">Ruby on Rails</a>.
-  This is the sample application for the tutorial.
+  Thank you to the <a href="http://www.railstutorial.org/"><em>Ruby on Rails
+  Tutorial</em></a> for helping me survive this project. Without your step by
+  step tutorials on how to build user logins and understand the framework, this
+  project would have never been possible. 
 </p>
+<p>
+  Also would like to acknowledge the help of the teaching staff, especially Stephen
+  Turban and Zach Chauvin for conducting the Rails Seminar and Gabriel Guimaraes for being an awesome TF.
+  </p>
