--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,10 +1,11 @@
 <% provide(:title, "Home") %>
-<% if logged_in? %>
+<% if logged_in? && user_good? %>
   <div class="row">
     <aside class="col-md-4">
       <section class="user_info">
         <%= render 'shared/user_info' %>
       </section>
+      <p></p>
       <section class="expense_form">
         <%= render 'shared/expense_form' %>
       </section>
