--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,19 +1,10 @@
 <% provide(:title, @user.name) %>
+<%= javascript_include_tag "http://www.google.com/jsapi", "chartkick" %>
 <div class="row">
-  <aside class="col-md-3">
-    <section class="user_info">
-      <h1>
-        <%= @user.name %>
-      </h1>
-    </section>
-  </aside>
-  <div class="col-md-8">
-    <% if @user.expenses.any? %>
-      <h3>Expenses (<%= @user.expenses.count %>)</h3>
-      <ol class="expenses">
-        <%= render @expenses %>
-      </ol>
-      <%= will_paginate @expenses %>
-    <% end %>
+
+  <!-- Line Chart - Single Series -->
+ <div class="col-m-6">
+	<h3>Expenses By Type</h3>
+		<%= column_chart @expenses.group(:category).sum(:value), {library: {hAxis: {title: "Category"}, vAxis: {title: "$ Spend"}}} %>
   </div>
 </div>
