--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,4 +1,4 @@
-<h1 id= "left"><%= current_user.name %></h1> 
+<h1 id= "left">Enter an Expense</h1> 
 <p><%= link_to "View Graphically!", current_user %></p>
 <p><%= pluralize(current_user.expenses.count, "Expense")%> Posted</p>
 <table>
