--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -2,9 +2,9 @@
 <h1>About</h1>
 <p>
   Thank you to the <a href="http://www.railstutorial.org/"><em>Ruby on Rails
-  Tutorial</em></a> for helping me survive this project. Without your step by
+  Tutorial</em></a> and Michael Hartl for helping me survive this project. Without your step by
   step tutorials on how to build user logins and understand the framework, this
-  project would have never been possible. 
+  project would have never been possible. Your CSS help also made the website beautiful.
 </p>
 <p>
   Also would like to acknowledge the help of the teaching staff, especially Stephen
