--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,9 +1,5 @@
 <% provide(:title, "Help") %>
 <h1>Help</h1>
 <p>
-  Get help on the Ruby on Rails Tutorial at the
-  <a href="http://www.railstutorial.org/#help">Rails Tutorial help section</a>.
-  To get help on this sample app, see the
-  <a href="http://www.railstutorial.org/book"><em>Ruby on Rails Tutorial</em>
-  book</a>.
+	I hope you find this product intuitive and helpful! Sign up, enter your budget, then click the home button (or website logo) to add expenses, then click the view profile link in the dropdown or "view graphs" link to see neat graphs detailing your spending!
 </p>
