--- a/app/views/budgets/new.html.erb
+++ b/app/views/budgets/new.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'New Budget') %>
-<h1>Enter Your Budget!</h1>
+<h1>Enter Your Monthly Disposable Income!</h1>
 
 <div class="col-md-6 col-md-offset-3">
   <%= form_for @budget, url: budget_path do |f| %>
