--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,7 +16,7 @@
   <!-- Line Chart - Single Series -->
  <div class="col-m-6">
 	<h3>Expenses By Type</h3>
-		<%= line_chart Expense.group_by_day(:created_at).count %>
+		<%= line_chart User.group_by_day(:created_at).count %>
   </div>
 </div>
 <% end %>
