Finish for now9

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,6 +10,7 @@
   </div>
 </div>
 <% elsif Rails.env.production? %>
+<%= javascript_include_tag "http://www.google.com/jsapi", "chartkick" %>
 
 <div class="row">
 
