--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
 <%= javascript_include_tag "http://www.google.com/jsapi", "chartkick" %>
+<%= javascript_include_tag "application", "chartkick" %>
 <% provide(:title, @user.name) %>
 <% if Rails.env.development? %>
 <div class="row">
@@ -10,7 +11,6 @@
   </div>
 </div>
 <% elsif Rails.env.production? %>
-<%= javascript_include_tag "http://www.google.com/jsapi", "chartkick" %>
 
 <div class="row">
 
