--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,4 @@
 <%= javascript_include_tag "http://www.google.com/jsapi", "chartkick" %>
-<%= javascript_include_tag "application", "chartkick" %>
 <% provide(:title, @user.name) %>
 <% if Rails.env.development? %>
 <div class="row">
@@ -11,7 +10,8 @@
   </div>
 </div>
 <% elsif Rails.env.production? %>
-
+ 	<%= javascript_include_tag "//www.google.com/jsapi" %>
+	<%= javascript_include_tag "application", "chartkick" %>
 <div class="row">
 
   <!-- Line Chart - Single Series -->
